FileBrowser fix Chromium shows horizontal scrollbar

--- a/src/FileBrowser.css
+++ b/src/FileBrowser.css
@@ -6,5 +6,5 @@
 
 .file-browser-entries {
     flex: 1;
-    overflow: scroll;
+    overflow: auto;
 }
